# JUST-OS

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  add_new_resources.py  app.py  bootstrap_local_database.py  compose.dev.yaml  compose.prod.yaml  compose.yaml  config.py  config.yaml  embed.py  embed_documents.py  ingest.py  ingest_v2.py  marker.sh  openscholar.py  pyproject.cpu.toml  pyproject.gpu.toml  pyproject.toml  qualle.py  query_processor.py  reference_processor.py  run
archive/241008/: embed_documents.py  select_chunks_for_rag.ipynb
archive/241008/checkpoints/chunk_classification/: classify_chunk.json
archive/241010/: agent.py  config.yaml  embed_documents.py
archive/241025/: chunk_documents.py
archive/241212/: marker.sh
assets/: esbuild.config.mjs  package.json
assets/css/: app.css
assets/js/: app.js
config/: gunicorn.py  settings.py  settings.py.example
data/: classified_chunks.json
data/interim/: 250304_chunks_shuffled_with_questions.json  chunked_paragraphs_241025_with_classification.json
data/processed/storage_m3/: docstore.json  index_store.json  multi_embed_store.pkl
data/raw/: forrt_db.xlsx  forrt_db_250627.csv
ingest/: drive.py  helpers.py
just_os/: app.py  chat_manager.py  compose.yaml  database.py  extensions.py  qualle.py  rag_service.py
just_os/templates/: index.html
nginx/conf/: default.conf
scripts_notebooks/241008/: embed_documents.py  out_241008.txt  simple_agent.py
scripts_notebooks/241008/data/: chunked_paragraphs.json  classified_chunks.json
scripts_notebooks/241010/: app.py
scripts_notebooks/241025/: classify_chunks.yaml
scripts_notebooks/250303/: question_classifier.ipynb
scripts_notebooks/data/interim/: 250304_chunks_with_questions.json  chunk_paragraphs_with_questions.json  chunked_paragraphs_241025.json  chunked_paragraphs_241025.jsonl  questions_and_text.csv
static/css/: style.css  style.css.old
static/js/: chat.js
templates/: index.html
